--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <link rel="preconnect" href="//bio.linkcdn.to">
 <link rel="dns-prefetch" href="//bio.linkcdn.to">
 <link rel="icon" href="https://bio.linkcdn.to/instabio.cc/favicon.ico">
-<title>اهلا بك فى مليونير العرب Arab Millionaire - InstaBio | Link in bio </title>
-<meta property="api:host" content="https://api.instabio.cc">
-<meta property="api:anlhost" content="https://sapi.instabio.cc">
+<title>اهلا بك فى مليونير العرب Arab Millionaire - 
+
 <meta name="description" content="انت على بضع خطوات من الدخول فى سحب ال 2 مليون دولار والاف الجوائز لجميع المشاركين قم بالضغط علي زر اشترك برقمك الموجود بـالأسفل ثم قم بالتسجيل برقمك وسوف يصلك رمز تحقق على هاتفك المحمول بعد التسجيلك باستخدام رقم الهاتف الخاص بك ثم قم بالتفعيل بالكود الذى سيصلك على هاتفك تمنياتنا للجميع بالفوز معنا في مليونير العرب
 ">
 <meta property="og:title" content="اهلا بك فى مليونير العرب Arab Millionaire - InstaBio">
