--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <link rel="preconnect" href="//bio.linkcdn.to">
 <link rel="dns-prefetch" href="//bio.linkcdn.to">
 <link rel="icon" href="https://bio.linkcdn.to/instabio.cc/favicon.ico">
-<title>اهلا بك فى مليونير العرب Arab Millionaire - 
-
+<title>اهلا بك فى مليونير العرب Arab Millionaire - InstaBio | Link in bio </title>
+<meta property="api:host" content="https://api.instabio.cc">
+<meta property="api:anlhost" content="https://sapi.instabio.cc">
 <meta name="description" content="انت على بضع خطوات من الدخول فى سحب ال 2 مليون دولار والاف الجوائز لجميع المشاركين قم بالضغط علي زر اشترك برقمك الموجود بـالأسفل ثم قم بالتسجيل برقمك وسوف يصلك رمز تحقق على هاتفك المحمول بعد التسجيلك باستخدام رقم الهاتف الخاص بك ثم قم بالتفعيل بالكود الذى سيصلك على هاتفك تمنياتنا للجميع بالفوز معنا في مليونير العرب
 ">
 <meta property="og:title" content="اهلا بك فى مليونير العرب Arab Millionaire - InstaBio">
@@ -46,49 +47,3 @@ var js, fjs = document.getElementsByTagName('script')[0];
 //js=document.createElement('script');js.src='/static/js/share/base.js?t='+parseInt(Date.now()/1000/600,10);fjs.parentNode.insertBefore(js, fjs);
 js=document.createElement('script');js.src='https://bio.linkcdn.to/instabio.cc/static/js/share/v3.2/base.js?t=1637912475205';fjs.parentNode.insertBefore(js, fjs);
 </script>
-<link rel="stylesheet" type="text/css" href="https://bio.linkcdn.to/instabio.cc/static/biolink/default.css?t=1638259195360">
-<link rel="stylesheet" type="text/css" media="none" onload="this.media='all'" href="https://bio.linkcdn.to/instabio.cc/static/biolink/online_14.css?t=1631847017970">
-<script src="https://bio.linkcdn.to/instabio.cc/static/js/share/v3.2/theme.css.js?t=16375636214567"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
-<link rel="stylesheet" href="//bio.linkcdn.to/instabio.cc/static/vendor/jedate/jedate.css" media="none" onload="this.media='all'">
-<script src="//bio.linkcdn.to/instabio.cc/static/vendor/jedate/jedate.js?t=1600831135615"></script>
-<link rel="stylesheet" href="https://bio.linkcdn.to/instabio.cc/static/vendor/swiper/swiper.min.css?t=1" media="none" onload="this.media='all'">
-<script src="https://bio.linkcdn.to/instabio.cc/static/vendor/swiper/swiper-v6.6.2.min.js"></script>
-<script async defer src="https://bio.linkcdn.to/instabio.cc/static/js/online_14.js?t=1632706094845"></script>
-</head>
-<body>
-<div class="bg-container">
-<div class="bg-0"></div><div class="bg-1"><div class="bg"><div></div></div></div><div class="bg-2"></div>
-</div>
-<div class="body">
-<div class="container">
-<section>
-<div class="section-bg"></div>
-<div class="center">
-<div class="center-profile header-show">
-<div class="avatar">
-<img src="https://bio.linkcdn.to/static/scene/blank.png?t=11111" alt="">
-</div>
-<div class="text-ctm text">
-<h3></h3>
-<div class="desc"><span></span></div>
-</div>
-</div>
-<div class="cmpt-button-buttonLink" id="swiper">
-</div>
-<div class="bio-social">
-<ul></ul>
-</div>
-</div>
-</section>
-</div>
-</div>
-<div class="form-tmpl-container" id="form-tmpl-container">
-</div>
-<div class="popup popup-mask">
-</div>
-</body>
-<script async defer src="https://bio.linkcdn.to/instabio.cc/static/js/share/v3.2/share-cmpt-v2.js?t=1637889880176"></script>
-<script src="https://bio.linkcdn.to/instabio.cc/static/vendor/sweetalert.min.js"></script>
-<script src="https://bio.linkcdn.to/instabio.cc/static/js/share/v3.2/share-tmpl.js?t=1637889880176"></script>
-</html>
